SYS-425: Jumping CV fix and more gallery control.
Firefox adds a bit of padding to tables by default, whereas Safari doesn't. Padding now removed regardless of browser.

--- a/css/all.css
+++ b/css/all.css
@@ -24,4 +24,6 @@ h2 {
 	
 td {
 	vertical-align: top;
+	margin: 0;
+	padding: 0;
 }
